banner btn gap fixed

--- a/wp-content/themes/the-marketing-co/assets/css/main.css
+++ b/wp-content/themes/the-marketing-co/assets/css/main.css
@@ -10797,13 +10797,13 @@ h5 {
   color: #C58383;
   margin: 0;
 }
-.inner-banner-section .inner-banner-title:has(+ .button-wrap) {
-  margin: 0 0 35px;
+.inner-banner-section .button-wrap {
+  margin-top: 35px;
   /* Large Devices, Wide Screens */
 }
 @media (max-width: 767px) {
-  .inner-banner-section .inner-banner-title:has(+ .button-wrap) {
-    margin: 0 0 25px;
+  .inner-banner-section .button-wrap {
+    margin-top: 25px;
   }
 }
 
