--- a/wp-content/themes/the-marketing-co/resources/scss/layout/_inner-banner.scss
+++ b/wp-content/themes/the-marketing-co/resources/scss/layout/_inner-banner.scss
@@ -14,12 +14,11 @@
             color: $color_primary;
             margin: 0;
         }
-
-        &:has(+ .button-wrap){
-            margin: 0 0 35px;
-            @include breakpoint (small){
-                margin: 0 0 25px;
-            }
+    }
+    .button-wrap{
+        margin-top: 35px;
+        @include breakpoint (small){
+            margin-top: 25px;
         }
     }
 }
